--- a/Front-end/landing-page/package.json
+++ b/Front-end/landing-page/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "imports-loader": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flickity-component": "^3.2.0",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
